Opened 10 months ago
Closed 10 months ago
#18883 closed bug (fixed)
Missing deskbar menu entries in B_USER_DESKBAR_DIRECTORY
Reported by: | kallisti5 | Owned by: | jscipione |
---|---|---|---|
Priority: | normal | Milestone: | R1/beta5 |
Component: | Applications/Deskbar | Version: | R1/beta4 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
I was playing around with fixes for Dockbert, and noticed that the "DockbertIcon" was missing. A little investigation shows it iterates over B_USER_DESKBAR_DIRECTORY looking for deskbar icons.
It doesn't find any icons, and the parent icon doesn't show up. I manually added the icon to the application, and all the menus were empty
Looking at B_USER_DESKBAR_DIRECTORY on my system...
/boot/home/config/settings/deskbar/menu
find /boot/home/config/settings/deskbar/menu /boot/home/config/settings/deskbar/menu /boot/home/config/settings/deskbar/menu/Applications /boot/home/config/settings/deskbar/menu/Demos /boot/home/config/settings/deskbar/menu/Desktop applets /boot/home/config/settings/deskbar/menu/Preferences
The menus are there, but they're all empty. It appears they're supposed to contain links to all of the installed applications
Attachments (1)
Change History (4)
by , 10 months ago
Attachment: | screenshot9.png added |
---|
comment:3 by , 10 months ago
Milestone: | Unscheduled → R1/beta5 |
---|---|
Resolution: | → fixed |
Status: | new → closed |
resolved via hrev57704
Note:
See TracTickets
for help on using tickets.
Oohh, we DID move it when we moved to hpkg's
Looking in Haikuports: /boot/system/data/deskbar/menu while B_USER_DESKBAR_DIRECTORY reports /boot/home/config/settings/deskbar/menu
There's no B_SYSTEM_DESKBAR_DIRECTORY